<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/trasparant"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="Tracking initated by:"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_15dp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_tracking_initiated_by"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="RAM S, Transport Coordinator"
                android:textColor="@color/red"
                android:textSize="@dimen/_15dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/tracking_start_time_date"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_15dp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_tracking_start_time_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="3:30 PM, 02 Jul 2021"
                android:textColor="@color/black"
                android:textSize="@dimen/_15dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/tracking_end_time_date"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_15dp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_tracking_end_time_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="3:30 PM, 03 Jul 2021"
                android:textColor="@color/black"
                android:textSize="@dimen/_15dp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_map_view"
            android:layout_width="@dimen/_180dp"
            android:layout_height="@dimen/_30dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15dp"
            android:background="@drawable/rounded_rectangle_blue_filled"
            android:text="@string/view_in_map"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sp" />

        <View
            android:layout_marginTop="@dimen/_10dp"
            android:background="@color/colorGray"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

    </LinearLayout>
</RelativeLayout>