<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="@dimen/_60dp"
        android:layout_height="@dimen/_70dp"
        android:layout_marginStart="@dimen/_45dp"
        android:layout_marginEnd="@dimen/_10dp"
        android:translationZ="@dimen/_60dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_customer_logo"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginLeft="@dimen/_2dp"
            android:background="@drawable/bg_white_rectangle"
            android:src="@drawable/app_icon" />
    </RelativeLayout>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/rl_profile_pic"
        android:layout_width="@dimen/_55dp"
        android:layout_height="@dimen/_55dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/_5dp"
        android:background="@drawable/bg_white_rectangle"
        android:elevation="@dimen/_10dp"
        android:translationZ="@dimen/_60dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_user_logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_launcher_foreground" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/_5dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/_40dp"
            android:layout_height="@dimen/_40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_5dp"
            android:layout_marginLeft="@dimen/_20dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/_8dp"
            android:src="@drawable/ic_left_arrow" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_70dp"
            android:layout_marginLeft="@dimen/_90dp"
            android:layout_toEndOf="@+id/iv_back"
            android:layout_toRightOf="@+id/iv_back"
            android:includeFontPadding="false"
            android:text="GPS - XYZ School App"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_header2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"
        android:layout_below="@+id/rl_header"
        android:background="@color/colorGray"
        android:elevation="@dimen/_5dp"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/burger_menu"
            android:layout_width="@dimen/_35dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_10dp"
            android:clickable="true"
            android:elevation="@dimen/_20dp"
            android:focusable="true"
            android:src="@drawable/burger_menu" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_name_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_toRightOf="@+id/burger_menu"
            android:gravity="center"
            android:text="Test this GPS Tracker"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sp"
            android:textStyle="bold" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/ll_NoInternet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_150dp"
        android:gravity="center_horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/no_internet_pl_connect_to_internet"
            android:textColor="#FA3E30"
            android:textSize="@dimen/_22dp"
            android:textStyle="bold" />
    </LinearLayout>


    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_header2"
        tools:openDrawer="start">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:visibility="gone"
                android:id="@+id/ll_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/rl_header2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_0dp"
                    android:layout_weight="1.5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="@dimen/_300dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/congratulations_your_gps_tracker_is_working"
                        android:textColor="@color/red"
                        android:textSize="@dimen/_18dp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="@dimen/_300dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/your_live_location_is_visible_in_the_map_below"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_18dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="7.8">

                    <org.osmdroid.views.MapView
                        android:id="@+id/mapViewTestGPS"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_0dp"
                    android:layout_weight="0.7"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ll_map_curent_location"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="start">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/iv_map_icon"
                            android:layout_width="@dimen/_50dp"
                            android:layout_height="@dimen/_50dp"
                            android:src="@drawable/ic_pink_marker" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_toRightOf="@+id/iv_map_icon1"
                            android:gravity="center"
                            android:maxLines="2"
                            android:text="your location"
                            android:textColor="@color/pink"
                            android:textSize="@dimen/_15dp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </FrameLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigationView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/colorPrimary"
            android:itemTextAppearance="@style/NavDrawerTextStyle"
            app:itemIconTint="@color/white"
            app:itemTextAppearance="?android:attr/textAppearanceMedium"
            app:itemTextColor="@color/white"
            app:menu="@menu/menu_navigation" />
    </androidx.drawerlayout.widget.DrawerLayout>

    <include
        layout="@layout/layout_no_internet_connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/rl_map_icon"
        android:layout_alignParentBottom="true"
        android:visibility="gone" />

</RelativeLayout>